@@ -2,6 +2,8 @@ Changes in @NEW@:
   o Bug Fixes:
     * The compatibility interfaces created for RPCL-63 are now
       compiled. (RPCL-64)
+    * The api1 module now properly sets __all__ to include all public
+      interfaces.
 
 Changes in 4.0:
   o New Feature:
